conventions.  Introduced a new header variable "upphi" to
control this added rotation.  Using "#upphi 90" in each
BSDF input file gets back the original behavior, where it
assumes that the up direction is 90-degrees from the X-axis.
The default value of 0 corresponds to PAB's definition of
the X-axis as being "up".

Fixed bug in rsensor related to having many rows (altitude) and
few columns (azimuth) in sensitivity file.

Fixed floating point round-off error in new Hessian calculation
for some sytems (Windows, primarily).

Fixed bug in tensor tree BSDF code that caused bus error on
some systems, and may have been source of other errors as well.

(Above changes included in 4.2.2 patch release.)

Improved ambient extrapolation to avoid zero values.  Actual
threshold set to 5% of recorded value.

Changed anisotropic Gaussian and Ashikhmin models so that
illegal orientation vectors are dealt with more gracefully.

Created wrapBSDF tool and incorporated into genBSDF along
with new rfluxmtx computation.

Initial check-in of Roland Schregle's photon map integration.
New 5.0a version designation as suggested by Andy McNeil.

Added left-hand coordinate sytems to rfluxmtx to correct
problems with coordinate axis orientations pointed out by
David Geisler-Moroder.

Added color output to genBSDF (+C option) and support for
color rendering of Klems and tensor tree data.

Fixed another bug in rsensor that caused rays to be generated
on opposite side of hemisphere even where sensitivity was zero.

Fixed bug discovered by Jacob Jonsson in Klems BSDF
interpolator that caused it to over-predict normal
transmittance and reflectance.

Added ability to read input from commands in dctimestep
and rmtxop.

Added photon map support to rad.  Fixed some double-counting
issues in photon-mapping spotted by David Geisler-Moroder.

Added photon map support to trad.

Fixed bug in antimatter source testing when antimatter
definition follows potential obstructor in input.